--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     <link rel="icon" type="image/png" href="webpage_assets/dreamsim_icon.png" />
 
     <title>DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data</title>
-    <meta property="og:image" content="Path to my teaser.png">
+    <meta property="og:image" content="./webpage_assets/teaser.png">
     <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-    <meta property="og:title" content="Creative and Descriptive Paper Title.">
-    <meta property="og:description" content="Paper description.">
+    <meta property="og:title" content="DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data">
+    <meta property="og:description" content="We generate a new benchmark of synthetic image triplets that span a wide range of mid-level variations, labeled with human similarity judgments.
+											The dots below each image indicate which image is considered most similar to the reference by humans vs several existing metrics and our new metric, DreamSim.">
 
     <!-- Get from Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
