--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <link rel="icon" type="image/png" href="webpage_assets/dreamsim_icon.png" />
 
-    <title>DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data</title>
+    <title>DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data111</title>
     <meta property="og:image" content="./webpage_assets/teaser.png">
     <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
     <meta property="og:title" content="DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data">
