--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <center>
         <span class="near-black" style="font-size:36px">DreamSim: Learning New Dimensions of</span>
         <br>
-        <span class="near-black" style="font-size:36px">Human Visual Similarity using Synthetic Data 1111</span>
+        <span class="near-black" style="font-size:36px">Human Visual Similarity using Synthetic Data</span>
         <br>
         <table align="center" width="900px">
             <tbody>
