--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="" target="_blank">Paper</a>
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="supplemental.html" target="_blank">Supplementary Material</a>
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="" target="_blank">Code</a>
+						<a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="" target="_blank">Colab</a>
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="#bibtex" id="bibtex_link" target="_self">Bibtex</a>
                         <!-- <a href="">Paper</a> | <a href="supplemental.html">Supplementary Material</a> |
                         <a href="">Code</a> | <a href="#bibtex" id="bibtex_link" target="_self">Bibtex</a> -->
