--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
             <tbody>
                 <tr>
                     <td align="center">
-                        <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="" target="_blank">Paper</a>
+                        <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="https://arxiv.org/abs/2306.09344" target="_blank">Paper</a>
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="supplemental.html" target="_blank">Supplementary Material</a>
-                        <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="" target="_blank">Code</a>
-						<a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="" target="_blank">Colab</a>
+                        <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="https://github.com/ssundaram21/dreamsim" target="_blank">Code & Data</a>
+						<a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="https://colab.research.google.com/drive/1taEOMzFE9g81D9AwH27Uhy2U82tQGAVI?usp=sharing" target="_blank">Colab</a>
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="#bibtex" id="bibtex_link" target="_self">Bibtex</a>
                         <!-- <a href="">Paper</a> | <a href="supplemental.html">Supplementary Material</a> |
                         <a href="">Code</a> | <a href="#bibtex" id="bibtex_link" target="_self">Bibtex</a> -->
