--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             @article{fu2023learning,<br>
                 &ensp;title={Learning New Dimensions of Human Visual Similarity using Synthetic Data},<br>
                 &ensp;author={Stephanie Fu* and Netanel Tamir* and Shobhita Sundaram* and Lucy Chai and Richard Zhang and Tali Dekel and Phillip Isola},<br>
-                &ensp;journal={arXiv:ID},<br>
+                &ensp;journal={arXiv:2306.09344},<br>
                 &ensp;year={2023}<br>
               }
         </code>
