--- a/index.html
+++ b/index.html
@@ -150,8 +150,12 @@
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="https://github.com/ssundaram21/dreamsim" target="_blank">Code & Data</a>
 						<a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="https://colab.research.google.com/drive/1taEOMzFE9g81D9AwH27Uhy2U82tQGAVI?usp=sharing" target="_blank">Colab</a>
                         <a class="bg-near-black f6 no_hover br-pill ph3 pv2 dib" href="#bibtex" id="bibtex_link" target="_self">Bibtex</a>
-                        <!-- <a href="">Paper</a> | <a href="supplemental.html">Supplementary Material</a> |
-                        <a href="">Code</a> | <a href="#bibtex" id="bibtex_link" target="_self">Bibtex</a> -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <a class="bg-near-black f6 no_hover_orange br-pill ph3 pv2 dib" href="https://voxel51.com/blog/teaching-androids-to-dream-of-sheep/" target="_blank">Blog Post</a>
+                        <a class="bg-near-black f6 no_hover_orange br-pill ph3 pv2 dib" href="https://try.fiftyone.ai/datasets/nights/samples" target="_blank">Explore the Dataset</a>
                     </td>
                 </tr>
             </tbody>
