changed images to jpg

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="webpage_assets/dreamsim_icon.png" />
 
     <title>DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data</title>
-    <meta property="og:image" content="./webpage_assets/teaser.png">
+    <meta property="og:image" content="./webpage_assets/teaser.jpg">
     <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
     <meta property="og:title" content="DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data">
     <meta property="og:description" content="We generate a new benchmark of synthetic image triplets that span a wide range of mid-level variations, labeled with human similarity judgments.
@@ -164,7 +164,7 @@
     </center>
 
     <center>
-        <img class="round" style="width:900px" src="./webpage_assets/teaser.png">
+        <img class="round" style="width:900px" src="./webpage_assets/teaser.jpg">
     </center>
     <br>
 	<p id="teaser-description">
@@ -262,7 +262,7 @@
         <div class="container-fluid" id="method-container" align="center" width="900px">
             <div class="row">
                 <div class="col" id="method-figure">
-                    <img class="round" style="width:500px" src="./webpage_assets/method.png">
+                    <img class="round" style="width:500px" src="./webpage_assets/method.jpg">
                 </div>
                 <div class="col" id="method-description">
                     Our perceptual metric is a pairwise image distance, computed as the cosine distance
@@ -299,52 +299,52 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_1.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_1.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_7.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_7.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_3.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_3.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_10.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_10.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_8.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_8.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_5.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_5.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_6.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_6.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_2.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_2.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_9.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_9.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_4.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_4.jpg">
                             </div>
                         </div>
                     </div>
@@ -399,27 +399,27 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <img class="inversion-img" src="./webpage_assets/inversion_1.png">
+                                <img class="inversion-img" src="./webpage_assets/inversion_1.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="inversion-img" src="./webpage_assets/inversion_2.png">
+                                <img class="inversion-img" src="./webpage_assets/inversion_2.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="inversion-img" src="./webpage_assets/inversion_3.png">
+                                <img class="inversion-img" src="./webpage_assets/inversion_3.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="inversion-img" src="./webpage_assets/inversion_4.png">
+                                <img class="inversion-img" src="./webpage_assets/inversion_4.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="inversion-img" src="./webpage_assets/inversion_5.png">
+                                <img class="inversion-img" src="./webpage_assets/inversion_5.jpg">
                             </div>
                         </div>
                     </div>
