--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>-->
-    <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+    <!--<script src="http://www.google.com/jsapi" type="text/javascript"></script>-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
 
@@ -56,28 +56,28 @@
                     <td align="center" width="215px">
                         <center>
                             <span style="font-size:24px"><a href="https://stephanie-fu.github.io/">Stephanie
-                                    Fu</a><sup style="vertical-align: sub;">*</sup><sup style="font-size: 0.7em;">1</sup>
+                                    Fu</a><sup style="vertical-align: sub;padding-left: 2px">*</sup><sup style="font-size: 0.7em;">1</sup>
                                 </span>
                         </center>
                     </td>
                     <td align="center" width="235px">
                         <center>
                             <span style="font-size:24px"><a href="https://netanel-tamir.github.io/">Netanel Y.
-                                    Tamir</a><sup style="vertical-align: sub;">*</sup><sup
+                                    Tamir</a><sup style="vertical-align: sub;padding-left: 2px">*</sup><sup
                                         style="font-size: 0.7em;">2</sup></span>
                         </center>
                     </td>
                     <td align="center" width="260px">
                         <center>
                             <span style="font-size:24px"><a href="https://ssundaram21.github.io/">Shobhita
-                                    Sundaram</a><sup style="vertical-align: sub;">*</sup><sup
+                                    Sundaram</a><sup style="vertical-align: sub;padding-left: 2px">*</sup><sup
                                         style="font-size: 0.7em;">1</sup></span>
                         </center>
                     </td>
                     <td align="center" width="190px">
                         <center>
                             <span style="font-size:24px"><a href="https://people.csail.mit.edu/lrchai/">Lucy
-                                    Chai</a><sup style="font-size: 0.7em;">1</sup></span>
+                                    Chai</a><sup style="font-size: 0.7em;padding-left: 1px;">1</sup></span>
                         </center>
                     </td>
                 </tr>
@@ -89,41 +89,35 @@
                     <td align="center" width="225px">
                         <center>
                             <span style="font-size:24px"><a href="http://richzhang.github.io/">Richard Zhang</a><sup
-                                        style="font-size: 0.7em;">3</sup></span>
+                                        style="font-size: 0.7em;padding-left: 2px;">3</sup></span>
                         </center>
                     </td>
                     <td align="center" width="225px">
                         <center>
                             <span style="font-size:24px"><a href="https://www.weizmann.ac.il/math/dekel/home">Tali
-                                    Dekel</a><sup style="font-size: 0.7em;">2</sup></span>
+                                    Dekel</a><sup style="font-size: 0.7em;padding-left: 2px;">2</sup></span>
                         </center>
                     </td>
                     <td align="center" width="225px">
                         <center>
                             <span style="font-size:24px"><a href="http://web.mit.edu/phillipi/">Phillip Isola</a><sup
-                                        style="font-size: 0.7em;">1</sup></span>
+                                        style="font-size: 0.7em;padding-left: 1px;">1</sup></span>
                         </center>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <table align="center" width="500px">
+        <table align="center" width="600px">
             <tbody>
                 <tr>
-                    <td align="center" width="50px">
-                        <center>
-                            <span style="font-size:18px"><sup>1</sup>MIT</span>
-                        </center>
+                    <td style="padding:10px">
+						<sup style="padding-right: 2px;font-size: 18px;top: -0.85em;">1</sup><img style="height:45px" src="./webpage_assets/MIT.png">
                     </td>
-                    <td align="center" width="300px">
-                        <center>
-                            <span style="font-size:18px"><sup>2</sup>Weizmann Institute of Science</span>
-                        </center>
+                    <td style="padding:10px">
+						<sup style="padding-right: 2px;font-size: 18px;top: -0.85em;">2</sup><img style="height:45px" src="./webpage_assets/WIS.png">
                     </td>
-                    <td align="center" width="150px">
-                        <center>
-                            <span style="font-size:18px"><sup>3</sup>Adobe Research</span>
-                        </center>
+                    <td style="padding:10px">
+						<sup style="padding-right: 2px;font-size: 18px;top: -0.85em;">3</sup><img style="height:45px" src="./webpage_assets/Adobe.png">
                     </td>
                 </tr>
             </tbody>
