--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
 
     <link href="styles.css" rel="stylesheet" />
+	<link href="fontawesome.all.min.css" rel="stylesheet" />
     <script src="script.js"></script>
 
     <link rel="icon" type="image/png" href="webpage_assets/dreamsim_icon.png" />
@@ -293,52 +294,52 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_1.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_1.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_7.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_7.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_3.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_3.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_10.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_10.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_8.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_8.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_5.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_5.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_6.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_6.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_2.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_2.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_9.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_9.png">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_4.jpg">
+                                <img class="teaser-img" src="./webpage_assets/nn_4.png">
                             </div>
                         </div>
                     </div>
