--- a/index.html
+++ b/index.html
@@ -294,52 +294,52 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_1.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_1.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_7.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_7.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_3.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_3.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_10.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_10.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_8.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_8.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_5.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_5.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_6.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_6.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_2.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_2.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_9.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_9.jpg">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div>
-                                <img class="teaser-img" src="./webpage_assets/nn_4.png">
+                                <img class="teaser-img" src="./webpage_assets/nn_4.jpg">
                             </div>
                         </div>
                     </div>
