--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="container-fluid" id="method-container" align="center" width="900px">
             <div class="row">
                 <div class="col" id="method-figure">
-                    <img class="round" style="width:500px" src="./webpage_assets/method.jpg">
+                    <img class="round" style="width:500px" src="./webpage_assets/method.png">
                 </div>
                 <div class="col" id="method-description">
                     Our perceptual metric is a pairwise image distance, computed as the cosine distance
