split title to two lines

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
 <body>
     <br>
     <center>
-        <span class="near-black" style="font-size:26px;font-weight:bold">DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data</span>
+        <span class="near-black" style="font-size:36px;font-weight:bold">DreamSim: Learning New Dimensions of</span>
         <br>
+		<span class="near-black" style="font-size:36px;font-weight:bold">Human Visual Similarity using Synthetic Data</span>
+        <br>
+
         <table align="center" width="900px">
             <tbody>
                 <tr>
