--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <br>
 		<span class="near-black" style="font-size:36px;font-weight:bold">Human Visual Similarity using Synthetic Data</span>
         <br>
-
+		<span class="near-black" style="font-size:32px;">NeurIPS 2023 Spotlight</span>
+        <br>
         <table align="center" width="900px">
             <tbody>
                 <tr>
