--- a/index.html
+++ b/index.html
@@ -536,11 +536,12 @@
     </center>
     <div class="col" class="code-col">
         <code style="font-size: 14px;">
-            @article{fu2023learning,<br>
+            @article{fu2024dreamsim,<br>
                 &ensp;title={DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data},<br>
-                &ensp;author={Stephanie Fu* and Netanel Tamir* and Shobhita Sundaram* and Lucy Chai and Richard Zhang and Tali Dekel and Phillip Isola},<br>
-                &ensp;journal={arXiv:2306.09344},<br>
-                &ensp;year={2023}<br>
+                &ensp;author={Fu, Stephanie and Tamir, Netanel and Sundaram, Shobhita and Chai, Lucy and Zhang, Richard and Dekel, Tali and Isola, Phillip},<br>
+                &ensp;journal={Advances in Neural Information Processing Systems},<br>
+                &ensp;volume={36}<br>
+		&ensp;year={2024}<br>
               }
         </code>
     </div>
