--- a/index.html
+++ b/index.html
@@ -536,12 +536,12 @@
     </center>
     <div class="col" class="code-col">
         <code style="font-size: 14px;">
-            @article{fu2024dreamsim,<br>
-                &ensp;title={DreamSim: Learning New Dimensions of Human Visual Similarity using Synthetic Data},<br>
-                &ensp;author={Fu, Stephanie and Tamir, Netanel and Sundaram, Shobhita and Chai, Lucy and Zhang, Richard and Dekel, Tali and Isola, Phillip},<br>
-                &ensp;journal={Advances in Neural Information Processing Systems},<br>
-                &ensp;volume={36}<br>
-		&ensp;year={2024}<br>
+            @inproceedings{fu2023dreamsim,<br>
+                &ensp;title={DreamSim: learning new dimensions of human visual similarity using synthetic data},,<br>
+                &ensp;author={Fu, Stephanie and Tamir, Netanel Y and Sundaram, Shobhita and Chai, Lucy and Zhang, Richard and Dekel, Tali and Isola, Phillip},<br>
+		&ensp;booktitle={Proceedings of the 37th International Conference on Neural Information Processing Systems},<br>
+                &ensp;pages={50742--50768},<br>
+		&ensp;year={2023}<br>
               }
         </code>
     </div>
